# open_mics_ZH

./: .gitignore  README.md  pyproject.toml  rebuild_app.cmd  rebuild_app.ps1  requirements.txt  start_app.cmd  start_app.ps1
.streamlit/: config.toml
config/: rules.json
data/processed/: events_enriched_20260411T155522Z.json  events_enriched_20260411T160608Z.json  events_enriched_20260412T112900Z.json  events_enriched_20260414T083551Z.json  events_enriched_20260414T085508Z.json  events_enriched_20260414T090837Z.json  events_flat.csv  events_flat_gz_test.csv  location_geocache.json
docs/: MANUAL_EDITS.md  Quellenliste.md  STYLE_CI_GUIDE.md  WORKFLOW.md  article.html  index.html  map.html  promo-instagram.html  social-content.html
docs/assets/: fonts.css
docs/assets/fonts/: LICENSES.txt
docs/content/: article.md  index_body.md  map_text.json
docs/data/: events.json  events_manual.json  occurrences.json  venues.json  venues_manual.json
scrapers/: __init__.py  __main__.py  cli.py  enrich_listing.py  event_page.py  extractors.py  flatten_events.py  listing_runner.py  playwright_helpers.py  scrape.py  sources.py  venue_llm.py
src/: collect_data.py  export_site.py  geocode_locations.py  open_mics_app.py  pipeline_meta.py  rebuild_site.py  start_app.cmd  start_app.ps1  start_app.py  update_docs_event_coords.py
