[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-mics-zurich"
version = "0.1.0"
description = "Open Mics Zürich — Eventdaten sammeln und auswerten"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "datenpunk-ch", email = "datenpunk.ch@gmail.com" }]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
]

[project.urls]
Repository = "https://github.com/datenpunk-ch/open_mics_ZH"

[tool.hatch.build.targets.wheel]
packages = ["scrapers"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64", "osx-64"]

[tool.pixi.tasks]
collect = "python collect_data.py"
listing = "python collect_data.py listing"
run = "python collect_data.py run"
enrich = "python -m scrapers enrich"
flatten = "python -m scrapers flatten"
playwright-browsers = "playwright install chromium"
